--- a/BeerlandWeb/Properties/launchSettings.json
+++ b/BeerlandWeb/Properties/launchSettings.json
@@ -6,20 +6,22 @@
       "applicationUrl": "http://localhost:37431",
       "sslPort": 44355
     }
-  },
+  }
+  ,
   "profiles": {
     "BeerlandWeb": {
       "commandName": "Project",
       "dotnetRunMessages": true,
-      "launchBrowser": true,
+      "launchBrowser": false,
       "applicationUrl": "https://localhost:7169;http://localhost:5169",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
-    },
+    }
+    ,
     "IIS Express": {
       "commandName": "IISExpress",
-      "launchBrowser": true,
+      "launchBrowser": false,
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
