--- a/BeerlandWeb/package.json
+++ b/BeerlandWeb/package.json
@@ -25,7 +25,7 @@
   },
   "main": "./Components/main.ts",
   "scripts": {
-    "dev": "webpack-dev-server --hot --open",
+    "dev": "webpack-dev-server",
     "build": "webpack"
   },
   "author": "",
