Range generators extracted to separate module. Create Enum and converters for correct display of month. Updated generation of year, month and day ranges.

--- a/BeerlandWeb/BeerlandWeb.csproj
+++ b/BeerlandWeb/BeerlandWeb.csproj
@@ -83,6 +83,10 @@
       <TypeScriptCompile Include="Scripts\common.ts" />
       <TypeScriptCompile Include="Scripts\home.ts" />
       <TypeScriptCompile Include="Scripts\statistic.ts" />
+      <TypeScriptCompile Include="Utils\Converters\MonthConverter.ts" />
+      <TypeScriptCompile Include="Utils\Enums\EMonth.ts" />
+      <TypeScriptCompile Include="Utils\Interfaces\IDate.ts" />
+      <TypeScriptCompile Include="Utils\OrderGenerators\RangeGenerator.ts" />
     </ItemGroup>
 
     <ItemGroup>
