--- a/BeerlandWeb/package.json
+++ b/BeerlandWeb/package.json
@@ -2,6 +2,7 @@
   "name": "beerland",
   "version": "1.0.0",
   "dependencies": {
+    "moment": "^2.29.1",
     "vue": "^2.6.14",
     "vuetify": "^2.6.2"
   },
@@ -25,7 +26,7 @@
   },
   "main": "./Components/main.ts",
   "scripts": {
-    "dev": "webpack-dev-server",
+    "dev": "webpack --watch --hot --progress --no-stats",
     "build": "webpack"
   },
   "author": "",
