--- a/BeerlandWeb/package.json
+++ b/BeerlandWeb/package.json
@@ -19,6 +19,7 @@
     "typescript": "^4.5.4",
     "vue-class-component": "^7.2.6",
     "vue-loader": "^15.9.8",
+    "vue-property-decorator": "^9.1.2",
     "vue-template-compiler": "^2.6.14",
     "webpack": "^5.66.0",
     "webpack-cli": "^4.9.1",
