--- a/BeerlandWeb/tsconfig.json
+++ b/BeerlandWeb/tsconfig.json
@@ -7,6 +7,7 @@
     "moduleResolution": "node",
     "experimentalDecorators": true,
     "noImplicitAny": false,
+    "allowSyntheticDefaultImports": true
   },
   "exclude": ["node_modules"]
 }
