--- a/BeerlandWeb/Properties/launchSettings.json
+++ b/BeerlandWeb/Properties/launchSettings.json
@@ -12,7 +12,8 @@
     "BeerlandWeb": {
       "commandName": "Project",
       "dotnetRunMessages": true,
-      "launchBrowser": false,
+      "launchBrowser": true,
+      "launchUrl": "home/index",
       "applicationUrl": "https://localhost:7169;http://localhost:5169",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
