--- a/BeerlandWeb/package.json
+++ b/BeerlandWeb/package.json
@@ -5,6 +5,7 @@
     "apexcharts": "^3.33.0",
     "moment": "^2.29.1",
     "vue": "^2.6.14",
+    "vue-apexcharts": "^1.6.2",
     "vuetify": "^2.6.2"
   },
   "devDependencies": {
