--- a/BeerlandWeb/package.json
+++ b/BeerlandWeb/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "dependencies": {
     "apexcharts": "^3.33.0",
+    "axios": "^0.25.0",
     "moment": "^2.29.1",
     "vue": "^2.6.14",
     "vue-apexcharts": "^1.6.2",
