Small refactoring in statistic-drawer.

--- a/BeerlandWeb/BeerlandWeb.csproj
+++ b/BeerlandWeb/BeerlandWeb.csproj
@@ -83,9 +83,13 @@
       <TypeScriptCompile Include="Scripts\basePage.ts" />
       <TypeScriptCompile Include="Scripts\home.ts" />
       <TypeScriptCompile Include="Scripts\statistic.ts" />
+      <TypeScriptCompile Include="Utils\Api\ApiBase.ts" />
+      <TypeScriptCompile Include="Utils\Api\StatisticApi.ts" />
       <TypeScriptCompile Include="Utils\Converters\MonthConverter.ts" />
       <TypeScriptCompile Include="Utils\Enums\EMonth.ts" />
+      <TypeScriptCompile Include="Utils\Interfaces\IDate.ts" />
       <TypeScriptCompile Include="Utils\Interfaces\IStatistic.ts" />
+      <TypeScriptCompile Include="Utils\Interfaces\IStatisticViewModel.ts" />
       <TypeScriptCompile Include="Utils\OrderGenerators\RangeGenerator.ts" />
     </ItemGroup>
 
