--- a/BeerlandWeb/BeerlandWeb.csproj
+++ b/BeerlandWeb/BeerlandWeb.csproj
@@ -75,6 +75,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <PackageReference Include="IdentityServer4" Version="4.1.2" />
       <PackageReference Include="Serilog.AspNetCore" Version="4.1.1-dev-00250" />
     </ItemGroup>
 
@@ -82,10 +83,10 @@
       <TypeScriptCompile Include="d.ts" />
       <TypeScriptCompile Include="Scripts\basePage.ts" />
       <TypeScriptCompile Include="Scripts\home.ts" />
+      <TypeScriptCompile Include="Scripts\login.ts" />
       <TypeScriptCompile Include="Scripts\statistic.ts" />
       <TypeScriptCompile Include="Utils\Api\ApiBase.ts" />
       <TypeScriptCompile Include="Utils\Api\AxiosResponseHandler.ts" />
-      <TypeScriptCompile Include="Utils\Api\StatisticApi.ts" />
       <TypeScriptCompile Include="Utils\Converters\MonthConverter.ts" />
       <TypeScriptCompile Include="Utils\Enums\EMonth.ts" />
       <TypeScriptCompile Include="Utils\Interfaces\IDate.ts" />
