--- a/BeerlandWeb/BeerlandWeb.csproj
+++ b/BeerlandWeb/BeerlandWeb.csproj
@@ -86,7 +86,7 @@
       <TypeScriptCompile Include="Scripts\login.ts" />
       <TypeScriptCompile Include="Scripts\statistic.ts" />
       <TypeScriptCompile Include="Utils\Api\ApiBase.ts" />
-      <TypeScriptCompile Include="Utils\Api\AxiosResponseHandler.ts" />
+      <TypeScriptCompile Include="Utils\Api\AxiosHandler.ts" />
       <TypeScriptCompile Include="Utils\Converters\MonthConverter.ts" />
       <TypeScriptCompile Include="Utils\Enums\EMonth.ts" />
       <TypeScriptCompile Include="Utils\Interfaces\IDate.ts" />
