Login logic done. UI for login done.

--- a/BeerlandWeb/BeerlandWeb.csproj
+++ b/BeerlandWeb/BeerlandWeb.csproj
@@ -101,9 +101,11 @@
       <TypeScriptCompile Include="Utils\Api\AxiosHandler.ts" />
       <TypeScriptCompile Include="Utils\Converters\MonthConverter.ts" />
       <TypeScriptCompile Include="Utils\Enums\EMonth.ts" />
+      <TypeScriptCompile Include="Utils\Interfaces\IAuthRequest.ts" />
       <TypeScriptCompile Include="Utils\Interfaces\IDate.ts" />
       <TypeScriptCompile Include="Utils\Interfaces\ISeriesEntry.ts" />
       <TypeScriptCompile Include="Utils\Interfaces\IStatisticViewModel.ts" />
+      <TypeScriptCompile Include="Utils\Interfaces\IAuthResponse.ts" />
       <TypeScriptCompile Include="Utils\OrderGenerators\RangeGenerator.ts" />
     </ItemGroup>
 
