Add middleware for exception handling. Updated authentication process.

--- a/BeerlandWeb/BeerlandWeb.csproj
+++ b/BeerlandWeb/BeerlandWeb.csproj
@@ -100,6 +100,7 @@
       <TypeScriptCompile Include="Utils\Enums\EMonth.ts" />
       <TypeScriptCompile Include="Utils\Interfaces\IAuthRequest.ts" />
       <TypeScriptCompile Include="Utils\Interfaces\IDate.ts" />
+      <TypeScriptCompile Include="Utils\Interfaces\IError.ts" />
       <TypeScriptCompile Include="Utils\Interfaces\ISeriesEntry.ts" />
       <TypeScriptCompile Include="Utils\Interfaces\IStatisticViewModel.ts" />
       <TypeScriptCompile Include="Utils\Interfaces\IAuthResponse.ts" />
