--- a/BeerlandWeb/BeerlandWeb.csproj
+++ b/BeerlandWeb/BeerlandWeb.csproj
@@ -85,7 +85,7 @@
         <PrivateAssets>all</PrivateAssets>
         <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       </PackageReference>
-      <PackageReference Include="Serilog.AspNetCore" Version="4.1.1-dev-00250" />
+      <PackageReference Include="NLog.Web.AspNetCore" Version="5.0.0-rc2" />
     </ItemGroup>
 
     <ItemGroup>
