--- a/BeerlandWeb/VueApp/tsconfig.json
+++ b/BeerlandWeb/VueApp/tsconfig.json
@@ -7,7 +7,7 @@
     "moduleResolution": "node",
     "experimentalDecorators": true,
     "noImplicitAny": false,
-    "allowSyntheticDefaultImports": true
+    "allowSyntheticDefaultImports": true,
   },
-  "exclude": ["node_modules"]
+  "exclude": ["node_modules"],
 }
