NLog error target layout updated. Updated exception handling logic. Updated login view for display error id after failed authentication.

--- a/BeerlandWeb/nlog.config
+++ b/BeerlandWeb/nlog.config
@@ -8,9 +8,9 @@
     </extensions>
 
     <targets>
-        <target xsi:type="File" name="dbLogsTarget" fileName="C:\Users\Ivan Sachishin\Desktop\Dev\Beerland\logs\db\db-logs-${shortdate}.log" layout="${longdate}|${event-properties:item=EventId_Id:whenEmpty=0}|${level:uppercase=true}|${logger}|${message} ${exception:format=tostring}|url: ${aspnet-request-url}|action: ${aspnet-mvc-action}|${callsite}" />
-        <target xsi:type="File" name="errorLogsTarget" fileName="C:\Users\Ivan Sachishin\Desktop\Dev\Beerland\logs\errors\error-logs-${shortdate}.log" layout="${longdate}|${event-properties:item=EventId_Id:whenEmpty=0}|${level:uppercase=true}|${logger}|${message} ${exception:format=tostring}|url: ${aspnet-request-url}|action: ${aspnet-mvc-action}|${callsite}" />
-        <target xsi:type="ColoredConsole" name="consoleLogs" />
+        <target xsi:type="File" name="dbLogsTarget" fileName="C:\Users\Ivan Sachishin\Desktop\Dev\Beerland\logs\db\db-logs-${shortdate}.log" layout="${longdate}|${event-properties:item=EventId_Id:whenEmpty=0}|${level:uppercase=true}|${logger}|${message}|url: ${aspnet-request-url}|action: ${aspnet-mvc-action}|${callsite}" />
+        <target xsi:type="File" name="errorLogsTarget" fileName="C:\Users\Ivan Sachishin\Desktop\Dev\Beerland\logs\errors\error-logs-${shortdate}.log" layout="${longdate}${newline}|ID: ${event-properties:item=ErrorId:whenEmpty=0}|${newline}|Stacktrace:${newline} ${exception:format=StackTrace}${newline}|Logged by: ${logger}${newline}|Message: ${message} ${newline}|url: ${aspnet-request-url}|action: ${aspnet-mvc-action}|${callsite}${newline}" />
+        <target xsi:type="ColoredConsole" name="consoleLogs" layout="${MicrosoftConsoleLayout}" />
     </targets>
 
     <rules>
