--- a/BeerlandWeb/BeerlandWeb.csproj
+++ b/BeerlandWeb/BeerlandWeb.csproj
@@ -91,9 +91,10 @@
     <ItemGroup>
       <TypeScriptCompile Include="VueApp\d.ts" />
       <TypeScriptCompile Include="VueApp\Scripts\basePage.ts" />
-      <TypeScriptCompile Include="VueApp\Scripts\home.ts" />
+      <TypeScriptCompile Include="VueApp\Scripts\unitStorage.ts" />
       <TypeScriptCompile Include="VueApp\Scripts\login.ts" />
       <TypeScriptCompile Include="VueApp\Scripts\statistic.ts" />
+      <TypeScriptCompile Include="VueApp\Scripts\unitApprovement.ts" />
       <TypeScriptCompile Include="VueApp\Utils\Api\ApiBase.ts" />
       <TypeScriptCompile Include="VueApp\Utils\Api\AxiosHandler.ts" />
       <TypeScriptCompile Include="VueApp\Utils\Converters\MonthConverter.ts" />
@@ -102,6 +103,7 @@
       <TypeScriptCompile Include="VueApp\Utils\Interfaces\IAuthResponse.ts" />
       <TypeScriptCompile Include="VueApp\Utils\Interfaces\IDate.ts" />
       <TypeScriptCompile Include="VueApp\Utils\Interfaces\IError.ts" />
+      <TypeScriptCompile Include="VueApp\Utils\Interfaces\IProductionUnit.ts" />
       <TypeScriptCompile Include="VueApp\Utils\Interfaces\ISeriesEntry.ts" />
       <TypeScriptCompile Include="VueApp\Utils\Interfaces\IStatisticViewModel.ts" />
       <TypeScriptCompile Include="VueApp\Utils\OrderGenerators\RangeGenerator.ts" />
