--- a/BeerlandWeb/BeerlandWeb.csproj
+++ b/BeerlandWeb/BeerlandWeb.csproj
@@ -101,8 +101,10 @@
       <TypeScriptCompile Include="VueApp\Utils\Enums\EMonth.ts" />
       <TypeScriptCompile Include="VueApp\Utils\Interfaces\IAuthRequest.ts" />
       <TypeScriptCompile Include="VueApp\Utils\Interfaces\IAuthResponse.ts" />
+      <TypeScriptCompile Include="VueApp\Utils\Interfaces\IBeerMark.ts" />
       <TypeScriptCompile Include="VueApp\Utils\Interfaces\IDate.ts" />
       <TypeScriptCompile Include="VueApp\Utils\Interfaces\IError.ts" />
+      <TypeScriptCompile Include="VueApp\Utils\Interfaces\IHistoryEntry.ts" />
       <TypeScriptCompile Include="VueApp\Utils\Interfaces\IProductionUnit.ts" />
       <TypeScriptCompile Include="VueApp\Utils\Interfaces\ISeriesEntry.ts" />
       <TypeScriptCompile Include="VueApp\Utils\Interfaces\IStatisticViewModel.ts" />
