--- a/BeerlandWeb/nlog.config
+++ b/BeerlandWeb/nlog.config
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<nlog xmlns="http://www.nlog-project.org/schemas/NLog.xsd"
-      xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<nlog xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+      xmlns="http://www.nlog-project.org/schemas/NLog.xsd"
       autoReload="true">
 
     <extensions>
@@ -8,14 +8,18 @@
     </extensions>
 
     <targets>
-        <target xsi:type="File" name="dbLogsTarget" fileName="C:\Users\Ivan Sachishin\Desktop\Dev\Beerland\logs\db\db-logs-${shortdate}.log" layout="${longdate}|${event-properties:item=EventId_Id:whenEmpty=0}|${level:uppercase=true}|${logger}|${message}|url: ${aspnet-request-url}|action: ${aspnet-mvc-action}|${callsite}" />
-        <target xsi:type="File" name="errorLogsTarget" fileName="C:\Users\Ivan Sachishin\Desktop\Dev\Beerland\logs\errors\error-logs-${shortdate}.log" layout="${longdate}${newline}|ID: ${event-properties:item=ErrorId:whenEmpty=0}|${newline}|Stacktrace:${newline} ${exception:format=StackTrace}${newline}|Logged by: ${logger}${newline}|Message: ${message} ${newline}|url: ${aspnet-request-url}|action: ${aspnet-mvc-action}|${callsite}${newline}" />
-        <target xsi:type="ColoredConsole" name="consoleLogs" layout="${MicrosoftConsoleLayout}" />
+        <target xsi:type="File" name="dbLogsTarget"
+                fileName="C:\Users\Sachishin Ivan\Desktop\Dev\Beerland\logs\db\db-logs-${shortdate}.log"
+                layout="${longdate}|${event-properties:item=EventId_Id:whenEmpty=0}|${level:uppercase=true}|${logger}|${message}|url: ${aspnet-request-url}|action: ${aspnet-mvc-action}|${callsite}"/>
+        <target xsi:type="File" name="errorLogsTarget"
+                fileName="C:\Users\Sachishin Ivan\Desktop\Dev\Beerland\logs\errors\error-logs-${shortdate}.log"
+                layout="${longdate}${newline}|ID: ${event-properties:item=ErrorId:whenEmpty=0}|${newline}|Stacktrace:${newline} ${exception:format=StackTrace}${newline}|Logged by: ${logger}${newline}|Message: ${message} ${newline}|url: ${aspnet-request-url}|action: ${aspnet-mvc-action}|${callsite}${newline}"/>
+        <target xsi:type="ColoredConsole" name="consoleLogs" layout="${MicrosoftConsoleLayout}"/>
     </targets>
 
     <rules>
-        <logger name="Microsoft.EntityFrameworkCore.Database.Command" minlevel="Info" writeTo="dbLogsTarget" />
-        <logger name="*" minlevel="Error" writeTo="errorLogsTarget" />
-        <logger name="*" minlevel="Debug" writeTo="consoleLogs" />
+        <logger name="Microsoft.EntityFrameworkCore.Database.Command" minlevel="Info" writeTo="dbLogsTarget"/>
+        <logger name="*" minlevel="Error" writeTo="errorLogsTarget"/>
+        <logger name="*" minlevel="Debug" writeTo="consoleLogs"/>
     </rules>
 </nlog>
